--- a/src/assets/css/_menu.scss
+++ b/src/assets/css/_menu.scss
@@ -92,6 +92,7 @@
 		align-items: center;
 		width: 380px;
 		height: 180px;
+		border-radius: 180px;
 		background-color: #fff;
 		font-size: 70px;
 		line-height: 100px;
