메인 작업중

--- a/src/assets/css/_fonts.scss
+++ b/src/assets/css/_fonts.scss
@@ -7,6 +7,16 @@ This license is copied below, and is also available with a FAQ at:
 http://scripts.sil.org/OFL
 */
 
+// 100 Thin
+// 200 ExtraLight
+// 300 Light
+// 400 Regular
+// 500 Medium
+// 600 SemiBold
+// 700 Bold
+// 800 ExtraBold
+// 900 Black 
+
 @font-face {
 	font-family: 'Pretendard';
 	font-weight: 900;
