--- a/src/assets/css/_menu.scss
+++ b/src/assets/css/_menu.scss
@@ -89,13 +89,12 @@
 	.menu__category {
 		display: flex;
 		justify-content: center;
-		align-items: center;
 		width: 380px;
 		height: 180px;
 		border-radius: 180px;
 		background-color: #fff;
 		font-size: 70px;
-		line-height: 100px;
+		line-height: 195px;
 	}
 	.menu__img {
 		position: absolute;
@@ -117,10 +116,12 @@
 	.menu__name {
 		font-size: 14px;
 		line-height: 18px;
+		@include mixins.Ptd();
 	}
 	.menu__price {
 		font-size: 14px;
 		line-height: 18px;
+		@include mixins.Ptd();
 	}
 	.menu__discount {
 		color: #999;
@@ -146,6 +147,9 @@
 			height: 56px;
 			border-radius: 42px 42px 0 0;
 			background-color: #fc4f03;
+		}
+		.carousel__text {
+			line-height: 65px;
 		}
 	}
 }
