--- a/src/assets/css/_reset.scss
+++ b/src/assets/css/_reset.scss
@@ -1,14 +1,5 @@
 @use 'mixins';
 @use 'variables';
-// 100 Thin
-// 200 ExtraLight
-// 300 Light
-// 400 Regular
-// 500 Medium
-// 600 SemiBold
-// 700 Bold
-// 800 ExtraBold
-// 900 Black 
 
 * {
 	margin: 0;
@@ -33,7 +24,7 @@
 	font-size: 14px;
 	cursor: default;
 	line-height: 1;
-	letter-spacing: -0.025em;
+	// letter-spacing: -0.025em;
 	overflow-wrap: break-word;
 	tab-size: 4;
 }
