--- a/src/assets/css/_layout.scss
+++ b/src/assets/css/_layout.scss
@@ -204,5 +204,146 @@
 
 // footer
 .footer {
-	height: 500px;
+	position: relative;
+	z-index: 10;
+	background-color: #ffffff;
+	// height: 500px;
+	.carousel {
+		.carousel__loop {
+			padding-top: 3px;
+			.carousel__text {
+				font-size: 36px;
+			}
+		}
+	}
+}
+.footer__container {
+	display: flex;
+	padding: 40px 0;
+	margin-left: 30px;
+	margin-right: 30px;
+	border-top: 1px solid #000;
+	.footer__section {
+		flex: 1;
+	}
+	.footer__link {
+		> li {
+			margin-bottom: 10px;
+		}
+		a {
+			font-size: 28px;
+			font-weight: 500;
+		}
+	}
+	.footer__address {
+		.addr__info {
+			font-size: 28px;
+			font-weight: 500;
+			line-height: 1.3;
+		}
+		.btn__map {
+			display: inline-block;
+			padding: 6px 6px 4px;
+			border: 1px solid #000000;
+			border-radius: 25px;
+			font-size: 10px;
+		}
+		.cs__info {
+			margin-top: 50px;
+			line-height: 1.3;
+		}
+	}
+	.footer__sns {
+		> li {
+			margin-bottom: 8px;
+		}
+		a {
+			text-transform: uppercase;
+		}
+	}
+}
+.footer_copyright {
+	&:after {
+		content: '';
+		display: block;
+		clear: both;
+	}
+	margin-left: 30px;
+	margin-right: 30px;
+	padding-top: 38px;
+	padding-bottom: 60px;
+	.footer__section {
+		float: left;
+		// margin-right: 10%;
+		// width: calc(100%/3);
+		width: calc(70% - 145px);
+		&:first-child {
+			width: 30%;
+		}
+		&:last-of-type {
+			width: 145px;
+			text-align: right;
+		}
+	}
+}
+
+
+.footer__funkplay {
+	display: block;
+	position: relative;
+	height: 320px;
+	margin-left: 30px;
+	margin-right: 30px;
+	p {
+		text-transform: uppercase;
+	}
+}
+
+.img_funkplay {
+	width: 100%;
+	height: 204px;
+	position: absolute;
+	transform: translate(0, 0); 
+	animation: funkPlayEffect 1.5s ease-in-out alternate;
+}
+.img_funkplay.shadow:nth-of-type(1) {
+	-webkit-animation-delay: 0.0s;
+	animation-delay: 0.0s;
+	opacity: 0.1;
+}
+.img_funkplay.shadow:nth-of-type(2) {
+	-webkit-animation-delay: 0.1s;
+	animation-delay: 0.1s;
+	opacity: 0.2;
+}
+.img_funkplay.shadow:nth-of-type(3) {
+	-webkit-animation-delay: 0.2s;
+	animation-delay: 0.2s;
+	opacity: 0.3;
+}
+.img_funkplay.shadow:nth-of-type(4) {
+	-webkit-animation-delay: 0.3s;
+	animation-delay: 0.3s;
+	opacity: 0.4;
+}
+.img_funkplay.shadow:nth-of-type(5) {
+	-webkit-animation-delay: 0.4s;
+	animation-delay: 0.4s;
+	opacity: 0.5;
+}
+@-webkit-keyframes funkPlayEffect{
+	0% {
+		transform: translate(0, 100px); 
+	}
+	100% {
+		transform: translate(0, 0); 
+	}
+}
+@keyframes funkPlayEffect{
+	0% {
+		transform: translate(0, 100px); 
+	}
+	100% {
+		transform: translate(0, 0); 
+	}
 }
