--- a/src/assets/css/_layout.scss
+++ b/src/assets/css/_layout.scss
@@ -292,49 +292,100 @@
 	}
 }
 
-
 .footer__funkplay {
 	display: block;
 	position: relative;
-	height: 320px;
+	padding-bottom: 18%;
 	margin-left: 30px;
 	margin-right: 30px;
 	p {
 		text-transform: uppercase;
 	}
+	.btn__funkplay {
+		opacity: 0;
+		position: absolute;
+		right: 10%;
+		display: flex;
+		width: 270px;
+		height: 140px;
+		border-radius: 80px;
+		border: 1px solid #000000;
+		overflow: hidden;
+		z-index: 10;
+		align-items: center;
+		background-color: #ffffff;
+		@include mixins.transition(.3s, ease);
+		box-shadow: -3px 1px 22px 2px rgba(0,0,0,0.4);
+		-webkit-box-shadow: -3px 1px 22px 2px rgba(0,0,0,0.4);
+		-moz-box-shadow: -3px 1px 22px 2px rgba(0,0,0,0.4);
+		&.__active {
+			opacity: 1;
+		}
+	}
 }
 
+.shadow-box {
+	opacity: 1;
+	@include mixins.transition(1.7s, ease-in);
+	&.__active {
+		opacity: 0;
+	}
+}
 .img_funkplay {
-	width: 100%;
-	height: 204px;
 	position: absolute;
-	transform: translate(0, 0); 
-	animation: funkPlayEffect 1.5s ease-in-out alternate;
+	transform: translate(0, 100px); 
+	width: 100%;
+	padding-top: 0;
+	// height: 204px;
+	&.__active {
+		transform: translate(0, 0); 
+		animation: funkPlayEffect 1.3s ease-in-out alternate;
+	}
 }
 .img_funkplay.shadow:nth-of-type(1) {
-	-webkit-animation-delay: 0.0s;
-	animation-delay: 0.0s;
-	opacity: 0.1;
+	opacity: 0;
+	transform: translate(0, 100px); 
+	&.__active {
+		-webkit-animation-delay: 0.0s;
+		animation-delay: 0.0s; 
+		opacity: 0.1;
+	}
 }
 .img_funkplay.shadow:nth-of-type(2) {
-	-webkit-animation-delay: 0.1s;
-	animation-delay: 0.1s;
-	opacity: 0.2;
+	opacity: 0;
+	transform: translate(0, 100px); 
+	&.__active {
+		-webkit-animation-delay: 0.2s;
+		animation-delay: 0.2s;
+		opacity: 0.2;
+	}
 }
 .img_funkplay.shadow:nth-of-type(3) {
-	-webkit-animation-delay: 0.2s;
-	animation-delay: 0.2s;
-	opacity: 0.3;
+	opacity: 0;
+	transform: translate(0, 100px); 
+	&.__active {
+		-webkit-animation-delay: 0.3s;
+		animation-delay: 0.3s;
+		opacity: 0.3;
+	}
 }
 .img_funkplay.shadow:nth-of-type(4) {
-	-webkit-animation-delay: 0.3s;
-	animation-delay: 0.3s;
-	opacity: 0.4;
+	opacity: 0;
+	transform: translate(0, 100px); 
+	&.__active {
+		-webkit-animation-delay: 0.4s;
+		animation-delay: 0.4s;
+		opacity: 0.4;
+	}
 }
 .img_funkplay.shadow:nth-of-type(5) {
-	-webkit-animation-delay: 0.4s;
-	animation-delay: 0.4s;
-	opacity: 0.5;
+	opacity: 0;
+	transform: translate(0, 100px); 
+	&.__active {
+		-webkit-animation-delay: 0.5s;
+		animation-delay: 0.5s;
+		opacity: 0.5;
+	}
 }
 @-webkit-keyframes funkPlayEffect{
 	0% {
