상품상세 작업중

--- a/src/assets/css/product.scss
+++ b/src/assets/css/product.scss
@@ -267,8 +267,10 @@
   margin: 0 auto;
   padding-left: 256px;
   padding-right: 425px;
+  text-align: center;
   .product__section {
-    margin-top: 42px;
+    max-width: 1240px;
+    margin: 42px auto 0;
   }
   .accord_title {
     width: 100%;
