메인 작업중 비쥬얼 완료

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -97,6 +97,9 @@
 				border-radius: 32px;
 			}
 		}
+		.visual__video--visible {
+			visibility: visible;
+		}
 		.carousel {
 			height: 100%;
 			.carousel__mask {
