--- a/src/assets/css/_fonts.scss
+++ b/src/assets/css/_fonts.scss
@@ -80,30 +80,52 @@ http://scripts.sil.org/OFL
 	src: local('Pretendard Thin'), url('../fonts/Pretendard-Thin.subset.woff2') format('woff2'), url('../fonts/Pretendard-Thin.subset.woff') format('woff');
 }
 
-@font-face {
-	font-family: 'AT surt';
-	font-weight: 600;
-	font-display: swap;
-	src: local('AT Sult Extended'), url('../fonts/ATSurt-DemiBoldExtended.woff2') format('woff2'), url('../fonts/ATSurt-DemiBoldExtended.woff') format('woff');
-}
+// @font-face {
+// 	font-family: 'AT surt';
+// 	font-weight: 600;
+// 	font-display: swap;
+// 	src: local('AT Sult Extended'), url('../fonts/ATSurt-DemiBoldExtended.woff2') format('woff2'), url('../fonts/ATSurt-DemiBoldExtended.woff') format('woff');
+// }
 
-@font-face {
-	font-family: 'AT surt';
-	font-weight: 500;
-	font-display: swap;
-	src: local('AT Sult Extended'), url('../fonts/ATSurt-MediumExtended.woff2') format('woff2'), url('../fonts/ATSurt-MediumExtended.woff') format('woff');
-}
+// @font-face {
+// 	font-family: 'AT surt';
+// 	font-weight: 500;
+// 	font-display: swap;
+// 	src: local('AT Sult Extended'), url('../fonts/ATSurt-MediumExtended.woff2') format('woff2'), url('../fonts/ATSurt-MediumExtended.woff') format('woff');
+// }
 
-@font-face {
-	font-family: 'AT surt';
-	font-weight: 400;
-	font-display: swap;
-	src: local('AT Sult Extended'), url('../fonts/ATSurt-RegularExtended.woff2') format('woff2'), url('../fonts/ATSurt-RegularExtended.woff') format('woff');
-}
+// @font-face {
+// 	font-family: 'AT surt';
+// 	font-weight: 400;
+// 	font-display: swap;
+// 	src: local('AT Sult Extended'), url('../fonts/ATSurt-RegularExtended.woff2') format('woff2'), url('../fonts/ATSurt-RegularExtended.woff') format('woff');
+// }
 
 @font-face {
 	font-family: 'Druk Wide';
 	font-weight: 700;
 	font-display: swap;
 	src: local('Druk Wide'), url('../fonts/DrukWide-Bold.woff2') format('woff2'), url('../fonts/DrukWide-Bold.woff') format('woff');
+}
+
+// test
+@font-face {
+	font-family: 'AT surt';
+	font-weight: 600;
+	font-display: block;
+	src: local('AT Sult Extended'), url('../fonts/at_surt_demibold_extd-webfont.woff2') format('woff2'), url('../fonts/at_surt_demibold_extd-webfont.woff') format('woff');
+}
+
+@font-face {
+	font-family: 'AT surt';
+	font-weight: 500;
+	font-display: block;
+	src: local('AT Sult Extended'), url('../fonts/at_surt_medium_extd-webfont.woff2') format('woff2'), url('../fonts/at_surt_medium_extd-webfont.woff') format('woff');
+}
+
+@font-face {
+	font-family: 'AT surt';
+	font-weight: 400;
+	font-display: block;
+	src: local('AT Sult Extended'), url('../fonts/at_surt_extd-webfont.woff2') format('woff2'), url('../fonts/at_surt_extd-webfont.woff') format('woff');
 }
