--- a/src/assets/css/_layout.scss
+++ b/src/assets/css/_layout.scss
@@ -50,6 +50,7 @@
 	.nav__trigger {
 		display: flex;
 		justify-content: center;
+		align-items: center;
 		width: 117px;
 		height: 33px;
 		border: 1px solid #000;
@@ -57,7 +58,7 @@
 		background-color: #fff;
 		font-weight: 600;
 		font-size: 18px;
-		line-height: 35px;
+		// line-height: 35px;
 		text-align: center;
 		&:not(:first-child) {
 			margin-left: 10px;
@@ -158,10 +159,10 @@
 			vertical-align: text-top;
 		}
 	}
-	.nav__carousel {
+	.nav__marquee {
 		display: flex;
-		justify-content: center;
 		align-items: center;
+		justify-content: center;
 		position: relative;
 		height: 60px;
 		margin-top: 30px;
@@ -174,32 +175,21 @@
 				font-size: 14px;
 			}
 		}
-		.carousel {
+		.marquee {
 			position: absolute;
 			left: 0;
 			top: 0;
 			width: 100%;
 			height: 100%;
-			.carousel__mask {
-				display: flex;
-				align-items: center;
-				overflow: hidden;
+			border-radius: 0 0 42px 42px;
+			.marquee__mask {
 				height: 100%;
-				border-radius: 0 0 42px 42px;
 				background-color: #fc4f03;
 			}
-			.carousel__loop {
-				white-space: nowrap;
-				&:first-child {
-					animation: menuCarousel01 30s linear infinite;
-					animation-delay: -30s;
-				}
-				&:last-child {
-					animation: menuCarousel02 30s linear infinite;
-					animation-delay: -15s;
-				}
-				.carousel__text {
+			.marquee__loop {
+				.marquee__text {
 					margin: 0 12px;
+					color: #75fbd3;
 					font-size: 26px;
 				}
 			}
@@ -213,10 +203,10 @@
 	z-index: 10;
 	background-color: #ffffff;
 	// height: 500px;
-	.carousel {
-		.carousel__loop {
+	.marquee {
+		.marquee__loop {
 			padding-top: 3px;
-			.carousel__text {
+			.marquee__text {
 				font-size: 36px;
 			}
 		}
