믹스인 수정

--- a/src/assets/css/_mixins.scss
+++ b/src/assets/css/_mixins.scss
@@ -239,7 +239,12 @@ $sqrt_2: 1.41421356237;
 	font-weight: 700;
 }
 
-@mixin Ptd() {
+@mixin PtdRegular() {
 	font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif;
 	font-weight: 400;
+}
+
+@mixin PtdMedium() {
+	font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif;
+	font-weight: 500;
 }
