헤더 검색 추가

--- a/src/assets/css/_menu.scss
+++ b/src/assets/css/_menu.scss
@@ -97,6 +97,9 @@
 		font-size: 70px;
 		// line-height: 195px;
 	}
+	.menu__swiper {
+		height: 100%;
+	}
 	.menu__img {
 		position: absolute;
 		left: 50%;
