--- a/src/assets/css/_layout.scss
+++ b/src/assets/css/_layout.scss
@@ -10,21 +10,20 @@
 	width: 100%;
 	.header__container {
 		display: flex;
-		justify-content: center;
+		justify-content: space-between;
+		align-items: center;
 		position: relative;
-		padding-top: 30px;
+		min-height: 63px;
+		padding: 33px 30px 0 40px;
 		.logo {
-			position: absolute;
-			left: 40px;
-			top: 42px;
+			.logo__link {
+				display: block;
+			}
 		}
 	}
 	.header__right {
 		display: flex;
 		align-items: center;
-		position: absolute;
-		right: 30px;
-		top: 33px;
 	}
 	.header__funkplay {
 		display: block;
@@ -34,166 +33,251 @@
 	.header__funkplay--active {
 		@include sprite.retina-sprite(sprite.$bg-header-funkplay-on-group);
 	}
+	.nav {
+		position: absolute;
+		left: 50%;
+		top: 30px;
+		margin-left: -122px;
+		.nav__container {
+			display: flex;
+			position: relative;
+		}
+		.nav__trigger {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			position: relative;
+			z-index: 10;
+			width: 117px;
+			height: 33px;
+			border: 1px solid #000;
+			border-radius: 33px;
+			background-color: #fff;
+			font-weight: 600;
+			font-size: 18px;
+			// line-height: 35px;
+			text-align: center;
+			&:not(:first-child) {
+				margin-left: 10px;
+			}
+			.nav__ico {
+				display: flex;
+				align-self: center;
+				position: relative;
+				width: 27px;
+				height: 8px;
+				margin-right: 9px;
+				&:before,
+				&:after {
+					content: '';
+					display: block;
+					position: absolute;
+					left: 0;
+					width: 100%;
+					height: 1px;
+					background-color: #000;
+				}
+				&:before {
+					top: 0;
+				}
+				&:after {
+					top: 100%;
+				}
+			}
+		}
+		.nav__trigger--active {
+			background-color: #000;
+			color: #fff;
+			.nav__ico {
+				&:before,
+				&:after {
+					top: 50%;
+					background-color: #fff;
+				}
+			}
+			& + .nav__layer {
+				display: block;
+			}
+		}
+		.nav__layer {
+			display: none;
+			position: absolute;
+			left: 50%;
+			top: -15px;
+			width: 380px;
+			padding-top: 90px;
+			margin-left: -190px;
+			border: 1px solid #000;
+			border-radius: 42px;
+			background-color: #fff;
+		}
+		.nav__menu {
+			&:last-child {
+				padding-bottom: 60px;
+			}
+		}
+		.nav__menu--category {
+			.nav__link {
+				&:focus,
+				&:hover {
+					color: #5eecfa;
+				}
+			}
+		}
+		.nav__menu--theme {
+			margin-top: 30px;
+			.nav__item {
+				&:not(:first-child) {
+					margin-top: 8px;
+				}
+			}
+			.nav__link {
+				font-weight: 400;
+				font-size: 12px;
+			}
+		}
+		.nav__item {
+			text-align: center;
+			&:not(:first-child) {
+				margin-top: 20px;
+			}
+		}
+		.nav__link {
+			font-weight: 500;
+			font-size: 24px;
+		}
+		.nav__link--cart {
+			span {
+				color: #5eecfa;
+				font-weight: 600;
+				font-size: 14px;
+				line-height: 24px;
+				vertical-align: text-top;
+			}
+		}
+		.nav__marquee {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			position: relative;
+			height: 60px;
+			margin-top: 30px;
+			border-top: 1px solid #000;
+			border-radius: 0 0 42px 42px;
+			.nav__text {
+				font-size: 26px;
+				span {
+					position: relative;
+					font-size: 14px;
+				}
+			}
+			.marquee {
+				position: absolute;
+				left: 0;
+				top: 0;
+				width: 100%;
+				height: 100%;
+				border-radius: 0 0 42px 42px;
+				.marquee__mask {
+					height: 100%;
+					background-color: #fc4f03;
+				}
+				.marquee__loop {
+					.marquee__text {
+						margin: 0 12px;
+						color: #75fbd3;
+						font-size: 26px;
+					}
+				}
+			}
+		}
+	}
 	.search {
 		.search__trigger {
 			display: block;
 			@include sprite.retina-sprite(sprite.$ico-header-search-group);
 		}
-	}
-}
-
-// nav
-.nav {
-	.nav__container {
-		display: flex;
-	}
-	.nav__trigger {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		width: 117px;
-		height: 33px;
-		border: 1px solid #000;
-		border-radius: 33px;
-		background-color: #fff;
-		font-weight: 600;
-		font-size: 18px;
-		// line-height: 35px;
-		text-align: center;
-		&:not(:first-child) {
-			margin-left: 10px;
-		}
-		.nav__ico {
-			display: flex;
-			align-self: center;
-			position: relative;
-			width: 27px;
-			height: 8px;
-			margin-right: 9px;
-			&:before,
-			&:after {
-				content: '';
-				display: block;
-				position: absolute;
-				left: 0;
-				width: 100%;
-				height: 1px;
-				background-color: #000;
-			}
-			&:before {
-				top: 0;
-			}
-			&:after {
-				top: 100%;
-			}
-		}
-	}
-	.nav__trigger--active {
-		background-color: #000;
-		color: #fff;
-		.nav__ico {
-			&:before,
-			&:after {
-				top: 50%;
-				background-color: #fff;
-			}
-		}
-		& + .nav__layer {
-			display: block;
-		}
-	}
-	.nav__layer {
-		display: none;
-		position: absolute;
-		left: 50%;
-		top: 15px;
-		z-index: -1;
-		width: 380px;
-		padding-top: 90px;
-		margin-left: -190px;
-		border: 1px solid #000;
-		border-radius: 42px;
-		background-color: #fff;
-	}
-	.nav__menu {
-		&:last-child {
-			padding-bottom: 60px;
-		}
-	}
-	.nav__menu--category {
-		.nav__link {
-			&:focus,
-			&:hover {
-				color: #5eecfa;
-			}
-		}
-	}
-	.nav__menu--theme {
-		margin-top: 30px;
-		.nav__item {
-			&:not(:first-child) {
-				margin-top: 8px;
-			}
-		}
-		.nav__link {
-			font-weight: 400;
-			font-size: 12px;
-		}
-	}
-	.nav__item {
-		text-align: center;
-		&:not(:first-child) {
-			margin-top: 20px;
-		}
-	}
-	.nav__link {
-		font-weight: 500;
-		font-size: 24px;
-	}
-	.nav__link--cart {
-		span {
-			color: #5eecfa;
-			font-weight: 600;
-			font-size: 14px;
-			line-height: 24px;
-			vertical-align: text-top;
-		}
-	}
-	.nav__marquee {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		position: relative;
-		height: 60px;
-		margin-top: 30px;
-		border-top: 1px solid #000;
-		border-radius: 0 0 42px 42px;
-		.nav__text {
-			font-size: 26px;
-			span {
-				position: relative;
-				font-size: 14px;
-			}
-		}
-		.marquee {
+		.search__layer {
+			display: none;
 			position: absolute;
 			left: 0;
 			top: 0;
+			z-index: -1;
 			width: 100%;
-			height: 100%;
-			border-radius: 0 0 42px 42px;
-			.marquee__mask {
-				height: 100%;
-				background-color: #fc4f03;
-			}
-			.marquee__loop {
-				.marquee__text {
-					margin: 0 12px;
-					color: #75fbd3;
-					font-size: 26px;
+			padding-top: 135px;
+			background-color: #fff;
+		}
+		.search__layer--opened {
+			display: block;
+		}
+		.search__form {
+			max-width: 560px;
+			margin: 0 auto;
+			.search__row {
+				position: relative;
+				.search__input {
+					height: 46px;
+					border: 0;
+					border-bottom: 1px solid #000;
+					border-radius: 0;
+					background-color: #fff;
+					font-size: 24px;
+					text-align: center;
+				}
+				::-webkit-input-placeholder {
+					font-size: 24px;
+				}
+				::-moz-placeholder {
+					font-size: 24px;
+				}
+				.search__button {
+					position: absolute;
+					right: 8px;
+					top: 50%;
+					margin-top: -10px;
+					@include sprite.retina-sprite(sprite.$btn-header-search-group);
 				}
 			}
+			.search__recommend {
+				margin-top: 25px;
+			}
+			.search__list {
+				display: flex;
+				flex-wrap: wrap;
+				justify-content: center;
+				margin: -4px 0 0 -4px;
+			}
+			.search__item {
+				margin: 4px 0 0 4px;
+				&:nth-child(even) {
+					.search__link {
+						background-color: #000;
+						color: #fff;
+					}
+				}
+			}
+			.search__link {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				height: 33px;
+				padding: 0 14px;
+				border: 1px solid #000;
+				border-radius: 33px;
+				text-align: center;
+				@include mixins.PtdMedium();
+			}
 		}
+		.search__result {
+			margin-top: 25px;
+		}
+	}
+}
+
+// container
+.container {
+	> .search {
+		padding-top: 181px;
 	}
 }
 
