--- a/src/assets/css/_fonts.scss
+++ b/src/assets/css/_fonts.scss
@@ -80,37 +80,16 @@ http://scripts.sil.org/OFL
 	src: local('Pretendard Thin'), url('../fonts/Pretendard-Thin.subset.woff2') format('woff2'), url('../fonts/Pretendard-Thin.subset.woff') format('woff');
 }
 
-// @font-face {
-// 	font-family: 'AT surt';
-// 	font-weight: 600;
-// 	font-display: swap;
-// 	src: local('AT Sult Extended'), url('../fonts/ATSurt-DemiBoldExtended.woff2') format('woff2'), url('../fonts/ATSurt-DemiBoldExtended.woff') format('woff');
-// }
-
-// @font-face {
-// 	font-family: 'AT surt';
-// 	font-weight: 500;
-// 	font-display: swap;
-// 	src: local('AT Sult Extended'), url('../fonts/ATSurt-MediumExtended.woff2') format('woff2'), url('../fonts/ATSurt-MediumExtended.woff') format('woff');
-// }
-
-// @font-face {
-// 	font-family: 'AT surt';
-// 	font-weight: 400;
-// 	font-display: swap;
-// 	src: local('AT Sult Extended'), url('../fonts/ATSurt-RegularExtended.woff2') format('woff2'), url('../fonts/ATSurt-RegularExtended.woff') format('woff');
-// }
-
 /*
-        This font software is the property of Commercial Type.
+This font software is the property of Commercial Type.
 
-        You may not modify the font software, use it on another website, or install it on a computer.
+You may not modify the font software, use it on another website, or install it on a computer.
 
-        License information is available at http://commercialtype.com/eula
-        For more information please visit Commercial Type at http://commercialtype.com or email us at info[at]commercialtype.com
+License information is available at http://commercialtype.com/eula
+For more information please visit Commercial Type at http://commercialtype.com or email us at info[at]commercialtype.com
 
-        Copyright (C) 2022 Schwartzco Inc.
-        License: 2206-HSXIQN     
+Copyright (C) 2022 Schwartzco Inc.
+License: 2206-HSXIQN     
 */
 
 @font-face {
@@ -120,24 +99,27 @@ http://scripts.sil.org/OFL
 	src: local('Druk Wide'), url('../fonts/DrukWide-Bold-Web.woff2') format('woff2'), url('../fonts/DrukWide-Bold-Web.woff') format('woff');
 }
 
-// test
+/*			
+https://blazetype.eu/
+*/
+
 @font-face {
 	font-family: 'AT surt';
 	font-weight: 600;
 	font-display: block;
-	src: local('AT Sult Extended'), url('../fonts/at_surt_demibold_extd-webfont.woff2') format('woff2'), url('../fonts/at_surt_demibold_extd-webfont.woff') format('woff');
+	src: local('AT Sult Extended'), url('../fonts/SurtExtended-ExtendedDemiBold.woff2') format('woff2'), url('../fonts/SurtExtended-ExtendedDemiBold.woff') format('woff');
 }
 
 @font-face {
 	font-family: 'AT surt';
 	font-weight: 500;
 	font-display: block;
-	src: local('AT Sult Extended'), url('../fonts/at_surt_medium_extd-webfont.woff2') format('woff2'), url('../fonts/at_surt_medium_extd-webfont.woff') format('woff');
+	src: local('AT Sult Extended'), url('../fonts/SurtExtended-ExtendedMedium.woff2') format('woff2'), url('../fonts/SurtExtended-ExtendedMedium.woff') format('woff');
 }
 
 @font-face {
 	font-family: 'AT surt';
 	font-weight: 400;
 	font-display: block;
-	src: local('AT Sult Extended'), url('../fonts/at_surt_extd-webfont.woff2') format('woff2'), url('../fonts/at_surt_extd-webfont.woff') format('woff');
+	src: local('AT Sult Extended'), url('../fonts/SurtExtended-ExtendedRegular.woff2') format('woff2'), url('../fonts/SurtExtended-ExtendedRegular.woff') format('woff');
 }
