--- a/src/assets/css/_reset.scss
+++ b/src/assets/css/_reset.scss
@@ -16,6 +16,7 @@
 }
 
 :root {
+	-webkit-font-smoothing: antialiased;
 	-webkit-tap-highlight-color: transparent;
 	text-size-adjust: 100%;
 	color: #000;
